css/homepage.css
.main__container {
  display: flex;
  align-items: center;
}

.sidebar {
  width: 400px;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sidebar__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: fixed;
}

.sidebar__line {
  width: 1px;
  height: 80px;
  background-color: #868686;
  align-items: center;
  margin: 15px 0;
}

.fas {
  color: #868686;
  font-size: 2rem;
  cursor: pointer;
}

.fa-user {
  color: var(--primary-color);
}

.fa-graduation-cap:hover,
.fa-briefcase:hover {
  color: var(--primary-color);
}

.profile,
.education,
.work {
  display: flex;
  flex-direction: column;
}

.profile__subheading,
.profile__heading,
.education__heading,
.work__heading {
  padding: 1px 0;
  max-width: 250px;
}

.profile__heading,
.education__heading,
.work__heading {
  margin-bottom: 15px;
}

.profile__text {
  max-width: 400px;
  padding: 10px 0;
}

.education__text,
.work__text {
  max-width: 400px;
  padding: 2px 0;
}

.profile__image {
  width: 400px;
}

.profile__button--container {
  margin-top: 20px;
}

.profile__button {
  color: black;
  text-decoration: none;
  padding: 10px 20px;
  background-color: var(--primary-color);
  border-radius: 5px;
}

.blue__image {
  height: 500px;
  width: 100%;
  object-fit: contain;
}

.red__image {
  height: 500px;
  width: 100%;
  object-fit: contain;
  display: none;
}

.education,
.work {
  display: none;
}

.line {
  width: 100%;
  height: 1px;
  background-color: #868686;
  margin: 10px 0;
}

@media (max-width: 767px) {
  body {
    padding: 0 15px;
  }
  .sidebar,
  .sidebar__container {
    flex-direction: row;
    top: 5;
    bottom: 0;
    position: absolute;
  }
  .main__container {
    flex-direction: column-reverse;
  }
  .sidebar__line {
    width: 80px;
    height: 1px;
    background-color: #868686;
    align-items: center;
    margin: 0 15px;
  }
  .blueprofile__image {
    width: 50%;
  }
  .blue__image {
    height: auto;
  }
  .profile__subheading,
  .profile__heading {
    text-align: center;
    max-width: 800px;
    padding: 10px 0;
  }
  .profile__heading,
  .education__heading,
  .work__heading {
    margin: 0;
  }
  .education,
  .work {
    height: 50vh;
  }
}

